--- a/src/app/modules/menu/menu.component.html
+++ b/src/app/modules/menu/menu.component.html
@@ -1,3 +1,3 @@
-<a mat-list-item routerLinkActive="mat-elevation-z3" routerLink="dashboard">Link 1</a>
+<a mat-list-item routerLinkActive="mat-elevation-z3" routerLink="dashboard">OA 1</a>
 <a mat-list-item href="#">Link 2</a>
 <a mat-list-item href="#">Link 3</a>
