--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-<p>dashboard works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <highcharts-chart
+        *ngIf="showGraph"
+        [Highcharts]="Highcharts"
+        [options]="linechart"
+        style="width: 100%; height: 400px; display: block;"
+      >
+      </highcharts-chart>
+    </div>
+  </div>
+</div>
