--- a/src/app/modules/menu/menu.component.html
+++ b/src/app/modules/menu/menu.component.html
@@ -2,8 +2,17 @@
   <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/dashboard">
     Dashboard
   </button>
+  <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/actividad-tiempo">
+    Tiempo Actividad
+  </button>
+  <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/actividad-bote">
+    Actividad Bote
+  </button>
+  <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/quiz-basura">
+    Quiz Basura
+  </button>
 
-  <mat-expansion-panel class="mat-elevation-z0 mb-2" routerLinkActive="mat-elevation-z2 border">
+  <!-- <mat-expansion-panel class="mat-elevation-z0 mb-2" routerLinkActive="mat-elevation-z2 border">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Actividades
@@ -11,6 +20,6 @@
     </mat-expansion-panel-header>
     <a mat-list-item routerLinkActive="mat-elevation-z1 border" routerLink="/actividades/quiz-basura">Quiz Basura</a>
     <a mat-list-item routerLinkActive="mat-elevation-z1 border" routerLink="/actividades/dibujo">Dibujo</a>
-  </mat-expansion-panel>
+  </mat-expansion-panel> -->
 
 </mat-accordion>
