--- a/src/app/pages/actividades/actividades.component.html
+++ b/src/app/pages/actividades/actividades.component.html
@@ -1,7 +1,7 @@
 
 <div class="container pt-2">
-  <button mat-raised-button routerLink="dibujo" routerLinkActive="bg-red" >Dibujo</button>
-  <button mat-raised-button routerLink="quiz-basura" routerLinkActive="bg-red" >Quiz Basura</button>
+  <!-- <button mat-raised-button routerLink="dibujo" routerLinkActive="mat-elevation-6" >Dibujo</button>
+  <button mat-raised-button routerLink="quiz-basura" routerLinkActive="mat-elevation-6" >Quiz Basura</button> -->
 
   <div class="row py-3">
     <div class="col-12">
