--- a/src/app/pages/actividades/bote/bote.component.html
+++ b/src/app/pages/actividades/bote/bote.component.html
@@ -1,7 +1,5 @@
-
-
 <div class="container mt-2">
-  <h2>Quiz Basura</h2>
+  <h2>Actividad Bote</h2>
   <div class="row">
     <div class="col-md-12">
       <highcharts-chart
@@ -10,8 +8,10 @@
         [options]="linechart"
         style="width: 100%; height: 400px; display: block;"
         [(update)]="updateFlag"
+        [oneToOne]="true"
       >
       </highcharts-chart>
     </div>
+
   </div>
 </div>
