dibujos. assets. plataforma

--- a/src/app/modules/menu/menu.component.html
+++ b/src/app/modules/menu/menu.component.html
@@ -5,11 +5,18 @@
   <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/actividad-tiempo">
     Tiempo Actividad
   </button>
+  <hr>
   <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/actividad-bote">
-    Actividad Bote
+    Bote
   </button>
   <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/quiz-basura">
     Quiz Basura
+  </button>
+  <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/plataformas">
+    Plataformas
+  </button>
+  <button mat-button class="w-100 mb-2" routerLinkActive="mat-elevation-z1 border" routerLink="/dibujos">
+    Dibujo
   </button>
 
   <!-- <mat-expansion-panel class="mat-elevation-z0 mb-2" routerLinkActive="mat-elevation-z2 border">
