--- a/src/app/modules/navigation/navigation.component.html
+++ b/src/app/modules/navigation/navigation.component.html
@@ -23,7 +23,9 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
 
-      <span>wildlife-discovery</span>
+      <img class="py-2 me-3" style="height: 100%; width: auto;" src="assets/logo.png" alt="">
+
+      <span>Wildlife Discovery</span>
     </mat-toolbar>
 
     <!-- Rutas (navigation-routing.module.ts) -->
