--- a/src/app/pages/actividades/tiempo-actividad/tiempo-actividad.component.html
+++ b/src/app/pages/actividades/tiempo-actividad/tiempo-actividad.component.html
@@ -7,7 +7,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Seleccione la actividad:</mat-label>
         <mat-select [formControl]="actividadControl">
-          <mat-option *ngFor="let actividad of actividades" [value]="actividad">
+          <mat-option *ngFor="let actividad of actividades" [value]="actividad.id">
             {{actividad.nombre}}
           </mat-option>
         </mat-select>
