--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,15 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
+<div class="container mt-4">
+  <div class="row align-items-center">
+    <div class="col-12 d-flex align-items-center text-center">
+      <img class="img-fluid" style="height: 10rem; width: auto;" src="assets/logo.png" alt="">
+      <h1 class="ms-3">Bienvenidos a Wildlife Discovery!</h1>
+    </div>
+
+    <div class="col-12 mt-4">
+      <p>hola hola hola hola hola hola hola hola hola hola hola
+        hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola hola
+        hola hola hola hola hola hola hola hola
+      </p>
     </div>
   </div>
 </div>
